@@ -8,6 +8,8 @@ char *Modified      = "$WCMODS?Modified:Not modified$";
 char *Unversioned   = "$WCUNVER?Unversioned items found:no unversioned items$";
 char *Date          = "$WCDATE$";
 char *CustDate      = "$WCDATE=%a, %d %B %Y$";
+char *CustDateEmpty = "$WCDATE=$";
+char *CustDateInval = "$WCDATE=%a, %C %B %Y$";
 char *DateUTC       = "$WCDATEUTC$";
 char *CustDateUTC   = "$WCDATEUTC=%a, %d %B %Y$";
 char *TimeNow       = "$WCNOW$";
