@@ -33,6 +33,8 @@ Version 1.8.1
        editing message. (Stefan)
 - BUG: Issue #504: Log message editor always
        use antialiased fonts. (Stefan)
+- BUG: Issue #506: SubWCRev aborts if date
+       template is wrong. (Stefan)
 
 Version 1.8.0
 See the release notes here:
